# os

image/: .gitignore  a.txt  init.elf  kernel.elf  loop.elf  shell.elf
small/: readme.md
small/src/: Makefile  os.elf  os_dis.txt  os_elf.txt
small/src/source/: os.c  os.h  start.S
src/src/source/kernel/core/: syscall.c  task.c
src/src/source/kernel/dev/: dev.c
src/src/source/kernel/fs/devfs/: devfs.c
src/src/source/kernel/include/core/: task.h
src/src/source/kernel/include/cpu/: mmu.h
src/src/source/kernel/include/dev/: dev.h  tty.h
src/src/source/kernel/include/fs/: file.h
src/src/source/shell/: main.c  main.h
x86os/src/: readme.md  register.txt  syscall.txt
x86os/src/script/: readme.txt
x86os/src/source/applib/: crt0.S  cstart.c  lib_syscall.c  lib_syscall.h
x86os/src/source/comm/: boot_info.h  cpu_instr.h  elf.h  types.h
x86os/src/source/init/: main.c
x86os/src/source/kernel/core/: memory.c  syscall.c  task.c
x86os/src/source/kernel/cpu/: cpu.c  irq.c
x86os/src/source/kernel/dev/: console.c  disk.c  kbd.c  tty.c
x86os/src/source/kernel/fs/: file.c  fs.c
x86os/src/source/kernel/include/: os_cfg.h
x86os/src/source/kernel/init/: first_task.c  first_task_entry.S  init.c  init.h  lib_syscall.c  start.S
x86os/src/source/kernel/ipc/: mutex.c  sem.c
x86os/src/source/kernel/tools/: bitmap.c  klib.c  log.c
x86os/src/source/loader/: loader.h  loader_16.c  loader_32.c
x86os/src/source/loop/: main.c
x86os/src/source/shell/: CMakeLists.txt  main.c  main.h
x86os/src/source/snake/: main.c  main.h
(+23 files in other folders)
